--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.91.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.1",
     "next": "14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18"
