--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
