--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
-    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
